--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -1,2 +1,11 @@
 /* You can add global styles to this file, and also import other style files */
 @import "~bootstrap/dist/css/bootstrap.css";
+
+html, body {
+  background-color: #191414;
+}
+
+.btn {
+  background-color: white;
+  color: #191414;
+}
